--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,11 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc && cp package.json dist/",
-    "dev": "yarn build && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
-    "start": "yarn build && cd dist && node server.js"
+    "dev": "yarn migrate && yarn build && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
+    "start": "yarn migrate && yarn build && cd dist && node server.js",
+    "typeorm": "node --require ./node_modules/ts-node/register ./node_modules/typeorm/cli.js --config src/connectors/db.ts",
+    "typeorm:runcmd": "ts-node --transpile-only ./node_modules/typeorm/cli.js --config src/connectors/db.ts ",
+    "migrate": "yarn typeorm:runcmd migration:run"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -26,6 +29,7 @@
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
+    "ts-node": "^10.5.0",
     "typeorm": "^0.2.41",
     "typescript": "^4.1.4"
   },
