--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "chalk": "^5.0.1",
     "class-validator": "^0.12.2",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
