--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     restart: "always"
     depends_on:
       - "hfu_db"
+      - "hfu_redis"
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
     command: ["yarn", "start"]
