--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "chalk": "^5.0.1",
     "class-validator": "^0.12.2",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
@@ -29,7 +30,9 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.3.3",
+    "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
+    "response-time": "^2.3.2",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.5.0",
     "typeorm": "^0.2.41",
@@ -43,6 +46,8 @@
     "@types/node": "^17.0.8",
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-sendgrid": "^1.0.0",
+    "@types/redis": "^4.0.11",
+    "@types/response-time": "^2.3.5",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "babel-eslint": "^10.1.0",
