--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "migrate:generate": "yarn typeorm:runcmd migration:generate -- -n "
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
     "class-validator": "^0.12.2",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@twgdev/prettier-config": "^1.0.2",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.7",
     "@types/morgan": "^1.9.1",
