--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.14.0",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -44,6 +45,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.7",
+    "@types/express-validator": "^3.0.0",
     "@types/morgan": "^1.9.1",
     "@types/node": "^17.0.8",
     "@types/nodemailer": "^6.4.4",
