--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   hfu_redis:
-    image: "redis:alpine"
+    image: "redis:6.2.6-alpine"
     container_name: hfu_redis
     hostname: hfu_redis
     env_file:
@@ -12,7 +12,7 @@ services:
     restart: "always"
 
   hfu_db:
-    image: postgres
+    image: postgres:12-bullseye
     container_name: hfu_db
     restart: always
     hostname: "hfu_db"
