--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "eslint-config-twg/tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "target": "ES2017",
     "moduleResolution": "node",
     "esModuleInterop": true,
