Clean github workflow file

--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           cd server && yarn install && cd ..
 
-  mix-test:
+  yarn-test:
     runs-on: ubuntu-latest
     needs: dependencies
     services:
