--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -69,4 +69,4 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - run: yarn test
+      - run: cd server && yarn test
