--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -15,12 +15,14 @@ jobs:
       - name: Checkout Github repo
         uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+        working-directory: ./server
         with:
           node-version: "14"
           cache: "yarn"
       - name: Install dependencies
+        working-directory: ./server
         run: |
-          cd server && yarn install && cd ..
+          yarn install
 
   yarn-test:
     runs-on: ubuntu-latest
@@ -42,6 +44,7 @@ jobs:
       - name: Checkout Github repo
         uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+        working-directory: ./server
         with:
           node-version: "14"
           cache: "yarn"
