--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -7,9 +7,6 @@ on:
 jobs:
   dependencies:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: "server"
     steps:
       - name: Cancel previous runs
         uses: styfle/cancel-workflow-action@0.9.0
@@ -24,13 +21,10 @@ jobs:
           cache-dependency-path: server/yarn.lock
       - name: Install dependencies
         run: |
-          yarn install
+          cd server && yarn install
 
   yarn-test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: "server"
     needs: dependencies
     services:
       postgres:
@@ -53,4 +47,4 @@ jobs:
           node-version: "14"
           cache: "yarn"
           cache-dependency-path: server/yarn.lock
-      - run: yarn test
+      - run: cd server && yarn test
