--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "yarn migrate && yarn build && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
     "start": "yarn migrate && yarn build && cd dist && node server.js",
     "prettier:check": "prettier --check ./",
+    "linter:check": "eslint . --ext .ts",
     "typeorm": "node --require ./node_modules/ts-node/register ./node_modules/typeorm/cli.js --config src/connectors/db.ts",
     "typeorm:runcmd": "ts-node --transpile-only ./node_modules/typeorm/cli.js --config src/connectors/db.ts ",
     "run:task": "ts-node --transpile-only ",
@@ -27,6 +28,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
+    "fishery": "^2.2.2",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -41,16 +43,14 @@
     "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "response-time": "^2.3.2",
+    "supertest": "^6.2.2",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.5.0",
     "typeorm": "^0.2.41",
-    "typescript": "^4.1.4",
-    "fishery": "^2.2.2",
-    "supertest": "^6.2.2"
+    "typescript": "^4.1.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0",
-    "@twgdev/prettier-config": "^1.0.2",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.7",
@@ -58,26 +58,19 @@
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.180",
     "@types/morgan": "^1.9.1",
-    "@types/node": "^17.0.8",
+    "@types/node": "^14.14.25",
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-sendgrid": "^1.0.0",
     "@types/redis": "^4.0.11",
     "@types/response-time": "^2.3.5",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-config-twg": "1.0.4",
-    "eslint-plugin-html": "^6.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-xo": "^0.40.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "msw": "^0.39.2",
     "prettier": "^2.2.1",
@@ -88,6 +81,5 @@
   },
   "peerDependencies": {
     "@types/node": "^14.14.25"
-  },
-  "prettier": "@twgdev/prettier-config"
+  }
 }
