--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -30,6 +30,22 @@ jobs:
           cache-dependency-path: server/yarn.lock
       - run: cd server && yarn && yarn test
 
+  linter:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cancel previous runs
+        uses: styfle/cancel-workflow-action@0.9.0
+        with:
+          access_token: ${{ github.token }}
+      - name: Checkout Github repo
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+          cache: "yarn"
+          cache-dependency-path: server/yarn.lock
+      - run: cd server && yarn && yarn linter:check
+
   prettier:
     runs-on: ubuntu-latest
     steps:
